tests/good/quick_string.lat
int main() {
    string x = "COS\n";

    printString(x);
    return 0;
}