tests/bad/wrong_inheritance/bad111.lat
class A extends B {
    int a;
}

class B extends X {
    int b;
}

int main () {
    return 0;
}